# LocalGamepad-Client

./: CMakeLists.txt  main.cpp
include/sdl_gamepad/: controller_mapper.h  sdl_gamepad.h
include/udp_client/: udp_client.h
src/sdl_gamepad/: sdl_gamepad.cpp
src/udp_client/: udp_client.cpp
